# groceries

./: CMakeLists.txt  deps.json
include/grcs/: composite.hpp  groceries.hpp  msg.hpp
src/: composite.cpp  msg.cpp
tests/hello-world/: CMakeLists.txt  main.cpp
